# amaru_2d

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: main.rs
src/components/: ball.rs  brick.rs  mod.rs  paddle.rs  physics_components.rs  powerup.rs  wall.rs
src/resources/: mod.rs  scoreboard.rs  sounds.rs  textures.rs
src/systems/: collision.rs  load_sounds.rs  load_textures.rs  mod.rs  movement.rs  scoring.rs  startup.rs
