[package]
name = "breakout_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.3"}
bevy-inspector-egui = "0.20.0"
bevy_editor_pls = "0.5.0"
rand = "0.8.5"
bevy_rapier2d = "*"
serde = "1.0.189"
